--- a/internship2025.ioc
+++ b/internship2025.ioc
@@ -3,22 +3,15 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
-GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F429NIH6
 Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=UART4
-Mcu.IPNb=4
+Mcu.IPNb=2
 Mcu.Name=STM32F429NIHx
 Mcu.Package=TFBGA216
-Mcu.Pin0=PC11
-Mcu.Pin1=PC10
-Mcu.Pin2=PG6
-Mcu.Pin3=VP_SYS_VS_Systick
-Mcu.PinsNb=4
+Mcu.PinsNb=0
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429NIHx
@@ -34,16 +27,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.UART4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PC10.Mode=Asynchronous
-PC10.Signal=UART4_TX
-PC11.Mode=Asynchronous
-PC11.Signal=UART4_RX
-PG6.GPIOParameters=GPIO_PuPd
-PG6.GPIO_PuPd=GPIO_PULLDOWN
-PG6.Locked=true
-PG6.Signal=GPIO_Output
 PinOutPanel.CurrentBGAView=Top
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -77,7 +61,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_UART4_Init-UART4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
@@ -102,11 +86,5 @@ RCC.VCOSAIOutputFreq_ValueQ=12250000
 RCC.VCOSAIOutputFreq_ValueR=24500000
 RCC.VcooutputI2S=96000000
 RCC.VcooutputI2SQ=96000000
-UART4.IPParameters=VirtualMode,Parity,WordLength
-UART4.Parity=PARITY_EVEN
-UART4.VirtualMode=Asynchronous
-UART4.WordLength=WORDLENGTH_9B
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
 isbadioc=false
