added define for baud rate and named error pin

--- a/internship2025.ioc
+++ b/internship2025.ioc
@@ -20,7 +20,7 @@ Mcu.Pin2=PG6
 Mcu.Pin3=VP_SYS_VS_Systick
 Mcu.PinsNb=4
 Mcu.ThirdPartyNb=0
-Mcu.UserConstants=
+Mcu.UserConstants=BAUD_RATE,115200
 Mcu.UserName=STM32F429NIHx
 MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
@@ -40,7 +40,8 @@ PC10.Mode=Asynchronous
 PC10.Signal=UART4_TX
 PC11.Mode=Asynchronous
 PC11.Signal=UART4_RX
-PG6.GPIOParameters=GPIO_PuPd
+PG6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PG6.GPIO_Label=Error
 PG6.GPIO_PuPd=GPIO_PULLDOWN
 PG6.Locked=true
 PG6.Signal=GPIO_Output
@@ -102,7 +103,8 @@ RCC.VCOSAIOutputFreq_ValueQ=12250000
 RCC.VCOSAIOutputFreq_ValueR=24500000
 RCC.VcooutputI2S=96000000
 RCC.VcooutputI2SQ=96000000
-UART4.IPParameters=VirtualMode,Parity,WordLength
+UART4.BaudRate=BAUD_RATE
+UART4.IPParameters=VirtualMode,Parity,WordLength,BaudRate
 UART4.Parity=PARITY_EVEN
 UART4.VirtualMode=Asynchronous
 UART4.WordLength=WORDLENGTH_9B
