--- a/internship2025.ioc
+++ b/internship2025.ioc
@@ -1,6 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
-CAD.formats=
-CAD.pinconfig=
+CAD.formats=[]
+CAD.pinconfig=Dual
 CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -10,15 +10,19 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=UART4
-Mcu.IPNb=4
+Mcu.IP3=TIM5
+Mcu.IP4=UART4
+Mcu.IPNb=5
 Mcu.Name=STM32F429NIHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PC11
 Mcu.Pin1=PC10
-Mcu.Pin2=PG6
-Mcu.Pin3=VP_SYS_VS_Systick
-Mcu.PinsNb=4
+Mcu.Pin2=PC13
+Mcu.Pin3=PG7
+Mcu.Pin4=PG6
+Mcu.Pin5=VP_SYS_VS_Systick
+Mcu.Pin6=VP_TIM5_VS_ClockSourceINT
+Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=BAUD_RATE,115200
 Mcu.UserName=STM32F429NIHx
@@ -26,6 +30,7 @@ MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -34,17 +39,27 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UART4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PC10.Mode=Asynchronous
 PC10.Signal=UART4_TX
 PC11.Mode=Asynchronous
 PC11.Signal=UART4_RX
-PG6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=Button
+PC13.Locked=true
+PC13.Signal=GPXTI13
+PG6.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PG6.GPIO_Label=Error
 PG6.GPIO_PuPd=GPIO_PULLDOWN
 PG6.Locked=true
+PG6.PinState=GPIO_PIN_RESET
 PG6.Signal=GPIO_Output
+PG7.GPIOParameters=GPIO_Label
+PG7.GPIO_Label=Toggle
+PG7.Locked=true
+PG7.Signal=GPIO_Output
 PinOutPanel.CurrentBGAView=Top
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -74,11 +89,13 @@ ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
+ProjectManager.TemplateDestinationPath=C\:\\Users\\Andrei Trif\\STM32CubeIDE\\workspace_1.19.0\\internship2025
+ProjectManager.TemplateSourcePath=C\:\\ST\\STM32CubeIDE_1.19.0\\STM32CubeIDE\\plugins\\com.st.stm32cube.common.mx_6.15.0.202507011659\\db\\extra_templates
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_UART4_Init-UART4-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_UART4_Init-UART4-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB1TimFreq_Value=16000000
@@ -109,6 +126,11 @@ RCC.VCOSAIOutputFreq_ValueQ=12250000
 RCC.VCOSAIOutputFreq_ValueR=24500000
 RCC.VcooutputI2S=96000000
 RCC.VcooutputI2SQ=96000000
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
+TIM5.IPParameters=Period,Prescaler
+TIM5.Period=200
+TIM5.Prescaler=5000
 UART4.BaudRate=BAUD_RATE
 UART4.IPParameters=VirtualMode,Parity,WordLength,BaudRate
 UART4.Parity=PARITY_EVEN
@@ -116,5 +138,7 @@ UART4.VirtualMode=Asynchronous
 UART4.WordLength=WORDLENGTH_9B
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 board=custom
 isbadioc=false
