--- a/internship2025.ioc
+++ b/internship2025.ioc
@@ -46,8 +46,10 @@ PC10.Mode=Asynchronous
 PC10.Signal=UART4_TX
 PC11.Mode=Asynchronous
 PC11.Signal=UART4_RX
-PC13.GPIOParameters=GPIO_Label
+PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=Button
+PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC13.GPIO_PuPd=GPIO_PULLUP
 PC13.Locked=true
 PC13.Signal=GPXTI13
 PG6.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
