--- a/internship2025.ioc
+++ b/internship2025.ioc
@@ -10,9 +10,10 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=TIM5
-Mcu.IP4=UART4
-Mcu.IPNb=5
+Mcu.IP3=TIM4
+Mcu.IP4=TIM5
+Mcu.IP5=UART4
+Mcu.IPNb=6
 Mcu.Name=STM32F429NIHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PC11
@@ -21,8 +22,9 @@ Mcu.Pin2=PC13
 Mcu.Pin3=PG7
 Mcu.Pin4=PG6
 Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.Pin6=VP_TIM5_VS_ClockSourceINT
-Mcu.PinsNb=7
+Mcu.Pin6=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin7=VP_TIM5_VS_ClockSourceINT
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=BAUD_RATE,115200
 Mcu.UserName=STM32F429NIHx
@@ -39,6 +41,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UART4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -130,6 +133,9 @@ RCC.VcooutputI2S=96000000
 RCC.VcooutputI2SQ=96000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+TIM4.IPParameters=Prescaler,Period
+TIM4.Period=1000
+TIM4.Prescaler=16000
 TIM5.IPParameters=Period,Prescaler
 TIM5.Period=10
 TIM5.Prescaler=16000
@@ -140,6 +146,8 @@ UART4.VirtualMode=Asynchronous
 UART4.WordLength=WORDLENGTH_9B
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 VP_TIM5_VS_ClockSourceINT.Mode=Internal
 VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 board=custom
