--- a/internship2025.ioc
+++ b/internship2025.ioc
@@ -21,25 +21,28 @@ Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM1
 Mcu.IP5=TIM2
-Mcu.IP6=TIM4
-Mcu.IP7=TIM5
-Mcu.IP8=UART4
-Mcu.IPNb=9
+Mcu.IP6=TIM3
+Mcu.IP7=TIM4
+Mcu.IP8=TIM5
+Mcu.IP9=UART4
+Mcu.IPNb=10
 Mcu.Name=STM32F429NIHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PC11
 Mcu.Pin1=PC10
-Mcu.Pin10=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin11=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin10=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin11=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin12=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin2=PC13
 Mcu.Pin3=PA8
-Mcu.Pin4=PG7
-Mcu.Pin5=PG6
-Mcu.Pin6=PF10
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.Pin8=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin9=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=12
+Mcu.Pin4=PC8
+Mcu.Pin5=PG7
+Mcu.Pin6=PG6
+Mcu.Pin7=PF10
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.Pin9=VP_TIM1_VS_ClockSourceINT
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=BAUD_RATE,115200
 Mcu.UserName=STM32F429NIHx
@@ -74,6 +77,8 @@ PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC13.GPIO_PuPd=GPIO_PULLUP
 PC13.Locked=true
 PC13.Signal=GPXTI13
+PC8.Locked=true
+PC8.Signal=S_TIM3_CH3
 PF10.Locked=true
 PF10.Mode=IN8
 PF10.Signal=ADC3_IN8
@@ -122,7 +127,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_UART4_Init-UART4-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_UART4_Init-UART4-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB1TimFreq_Value=16000000
@@ -157,6 +162,8 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,Output Compare1 CH1
 SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
+SH.S_TIM3_CH3.ConfNb=1
 TIM1.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
 TIM1.IPParameters=Prescaler,Channel-Output Compare1 CH1,OCMode_1,Period
 TIM1.OCMode_1=TIM_OCMODE_TOGGLE
@@ -165,6 +172,9 @@ TIM1.Prescaler=16000
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=10
 TIM2.Prescaler=16000
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.IPParameters=Channel-PWM Generation3 CH3,Period
+TIM3.Period=10000
 TIM4.IPParameters=Prescaler,Period
 TIM4.Period=1000
 TIM4.Prescaler=16000
@@ -182,6 +192,8 @@ VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 VP_TIM5_VS_ClockSourceINT.Mode=Internal
