--- a/internship2025.ioc
+++ b/internship2025.ioc
@@ -1,24 +1,57 @@
 #MicroXplorer Configuration settings - do not modify
-CAD.formats=
-CAD.pinconfig=
+ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_8
+ADC3.DiscontinuousConvMode=ENABLE
+ADC3.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T1_CC1
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ScanConvMode,DiscontinuousConvMode,ExternalTrigConv
+ADC3.NbrOfConversionFlag=1
+ADC3.Rank-0\#ChannelRegularConversion=1
+ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC3.ScanConvMode=ENABLE
+CAD.formats=[]
+CAD.pinconfig=Dual
 CAD.provider=
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F429NIH6
 Mcu.Family=STM32F4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IPNb=2
+Mcu.IP0=ADC3
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM1
+Mcu.IP5=TIM2
+Mcu.IP6=TIM3
+Mcu.IP7=TIM4
+Mcu.IP8=TIM5
+Mcu.IP9=UART4
+Mcu.IPNb=10
 Mcu.Name=STM32F429NIHx
 Mcu.Package=TFBGA216
-Mcu.PinsNb=0
+Mcu.Pin0=PC11
+Mcu.Pin1=PC10
+Mcu.Pin10=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin11=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin12=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin2=PC13
+Mcu.Pin3=PA8
+Mcu.Pin4=PC8
+Mcu.Pin5=PG7
+Mcu.Pin6=PG6
+Mcu.Pin7=PF10
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.Pin9=VP_TIM1_VS_ClockSourceINT
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
-Mcu.UserConstants=
+Mcu.UserConstants=BAUD_RATE,115200
 Mcu.UserName=STM32F429NIHx
 MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
+NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -27,7 +60,38 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.UART4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA8.Signal=S_TIM1_CH1
+PC10.Mode=Asynchronous
+PC10.Signal=UART4_TX
+PC11.Mode=Asynchronous
+PC11.Signal=UART4_RX
+PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PC13.GPIO_Label=Button
+PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC13.GPIO_PuPd=GPIO_PULLUP
+PC13.Locked=true
+PC13.Signal=GPXTI13
+PC8.Locked=true
+PC8.Signal=S_TIM3_CH3
+PF10.Locked=true
+PF10.Mode=IN8
+PF10.Signal=ADC3_IN8
+PG6.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
+PG6.GPIO_Label=Error
+PG6.GPIO_PuPd=GPIO_PULLDOWN
+PG6.Locked=true
+PG6.PinState=GPIO_PIN_RESET
+PG6.Signal=GPIO_Output
+PG7.GPIOParameters=GPIO_Label
+PG7.GPIO_Label=Toggle
+PG7.Locked=true
+PG7.Signal=GPIO_Output
 PinOutPanel.CurrentBGAView=Top
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -35,7 +99,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -57,22 +121,30 @@ ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
+ProjectManager.TemplateDestinationPath=C\:\\Users\\Andrei Trif\\STM32CubeIDE\\workspace_1.19.0\\internship2025
+ProjectManager.TemplateSourcePath=C\:\\ST\\STM32CubeIDE_1.19.0\\STM32CubeIDE\\plugins\\com.st.stm32cube.common.mx_6.15.0.202507011659\\db\\extra_templates
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_UART4_Init-UART4-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
+RCC.APB1TimFreq_Value=16000000
 RCC.APB2Freq_Value=16000000
+RCC.APB2TimFreq_Value=16000000
 RCC.CortexFreq_Value=16000000
+RCC.EthernetFreq_Value=16000000
+RCC.FCLKCortexFreq_Value=16000000
 RCC.FamilyName=M
+RCC.HCLKFreq_Value=16000000
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=96000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB2Freq_Value,CortexFreq_Value,FamilyName,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,PLLCLKFreq_Value,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
+RCC.MCO2PinFreq_Value=16000000
 RCC.PLLCLKFreq_Value=96000000
 RCC.PLLQCLKFreq_Value=48000000
 RCC.RTCFreq_Value=32000
@@ -86,5 +158,45 @@ RCC.VCOSAIOutputFreq_ValueQ=12250000
 RCC.VCOSAIOutputFreq_ValueR=24500000
 RCC.VcooutputI2S=96000000
 RCC.VcooutputI2SQ=96000000
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,Output Compare1 CH1
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
+SH.S_TIM3_CH3.ConfNb=1
+TIM1.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
+TIM1.IPParameters=Prescaler,Channel-Output Compare1 CH1,OCMode_1,Period
+TIM1.OCMode_1=TIM_OCMODE_TOGGLE
+TIM1.Period=5
+TIM1.Prescaler=16000
+TIM2.IPParameters=Prescaler,Period
+TIM2.Period=10
+TIM2.Prescaler=16000
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.IPParameters=Channel-PWM Generation3 CH3,Period
+TIM3.Period=10000
+TIM4.IPParameters=Prescaler,Period
+TIM4.Period=1000
+TIM4.Prescaler=16000
+TIM5.IPParameters=Period,Prescaler
+TIM5.Period=10
+TIM5.Prescaler=16000
+UART4.BaudRate=BAUD_RATE
+UART4.IPParameters=VirtualMode,Parity,WordLength,BaudRate
+UART4.Parity=PARITY_EVEN
+UART4.VirtualMode=Asynchronous
+UART4.WordLength=WORDLENGTH_9B
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 board=custom
 isbadioc=false
