--- a/internship2025.ioc
+++ b/internship2025.ioc
@@ -17,6 +17,8 @@ Mcu.CPN=STM32F429NIH6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC3
 Mcu.IP1=NVIC
+Mcu.IP10=TIM9
+Mcu.IP11=UART4
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM1
@@ -24,25 +26,29 @@ Mcu.IP5=TIM2
 Mcu.IP6=TIM3
 Mcu.IP7=TIM4
 Mcu.IP8=TIM5
-Mcu.IP9=UART4
-Mcu.IPNb=10
+Mcu.IP9=TIM6
+Mcu.IPNb=12
 Mcu.Name=STM32F429NIHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PC11
 Mcu.Pin1=PC10
-Mcu.Pin10=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin11=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin12=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin13=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin2=PC13
-Mcu.Pin3=PA8
-Mcu.Pin4=PC8
-Mcu.Pin5=PG7
-Mcu.Pin6=PG6
-Mcu.Pin7=PF10
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.Pin9=VP_TIM1_VS_ClockSourceINT
-Mcu.PinsNb=14
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin12=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin14=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin15=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin17=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin2=PG12
+Mcu.Pin3=PG10
+Mcu.Pin4=PC13
+Mcu.Pin5=PA8
+Mcu.Pin6=PC8
+Mcu.Pin7=PG7
+Mcu.Pin8=PG6
+Mcu.Pin9=PF10
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=BAUD_RATE,115200
 Mcu.UserName=STM32F429NIHx
@@ -60,10 +66,12 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_BRK_TIM9_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UART4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA8.Signal=S_TIM1_CH1
@@ -82,14 +90,24 @@ PC8.Signal=S_TIM3_CH3
 PF10.Locked=true
 PF10.Mode=IN8
 PF10.Signal=ADC3_IN8
+PG10.GPIOParameters=GPIO_Label
+PG10.GPIO_Label=Toggle3
+PG10.Locked=true
+PG10.Signal=GPIO_Output
+PG12.GPIOParameters=GPIO_Label
+PG12.GPIO_Label=Toggle4
+PG12.Locked=true
+PG12.Signal=GPIO_Output
 PG6.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
-PG6.GPIO_Label=Error
+PG6.GPIO_Label=Toggle1
 PG6.GPIO_PuPd=GPIO_PULLDOWN
 PG6.Locked=true
 PG6.PinState=GPIO_PIN_RESET
 PG6.Signal=GPIO_Output
-PG7.GPIOParameters=GPIO_Label
-PG7.GPIO_Label=Toggle
+PG7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PG7.GPIO_Label=Toggle2
+PG7.GPIO_PuPd=GPIO_PULLDOWN
+PG7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PG7.Locked=true
 PG7.Signal=GPIO_Output
 PinOutPanel.CurrentBGAView=Top
@@ -127,7 +145,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_UART4_Init-UART4-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_UART4_Init-UART4-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM9_Init-TIM9-false-HAL-true,11-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB1TimFreq_Value=16000000
@@ -181,6 +199,12 @@ TIM4.Prescaler=16000
 TIM5.IPParameters=Period,Prescaler
 TIM5.Period=10
 TIM5.Prescaler=16000
+TIM6.IPParameters=Prescaler,Period
+TIM6.Period=10000
+TIM6.Prescaler=16000
+TIM9.IPParameters=Prescaler,Period
+TIM9.Period=10000
+TIM9.Prescaler=16000
 UART4.BaudRate=BAUD_RATE
 UART4.IPParameters=VirtualMode,Parity,WordLength,BaudRate
 UART4.Parity=PARITY_EVEN
@@ -198,5 +222,9 @@ VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 VP_TIM5_VS_ClockSourceINT.Mode=Internal
 VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM9_VS_ClockSourceINT.Mode=Internal
+VP_TIM9_VS_ClockSourceINT.Signal=TIM9_VS_ClockSourceINT
 board=custom
 isbadioc=false
